Delivery2 - Prototype Submission

--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
   </section>
 
   <section class="settings-container">
+
    <section class="txtline-container">
+
    </section>
+
    <section class="button-container">
     <a href="#" onclick="downloadCanvas(this)" download="file-name">Download</a>
     <input oninput="colorTxt(this.value)" class="color-picker" type="color" value="#323522"></input>
     <button onclick="changeFontSize(3)" class="fontsize-up">fontup</button>
     <button onclick="changeFontSize(-3)" class="fontsize-down">fontdown</button>
+    <button onclick="onAddTxtLine()" class="fontsize-down">add line</button>
    </section>
+
   </section>
  </main>
 
