Refactor draw text function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <input oninput="colorTxt(this.value)" class="color-picker" type="color" value="#323522"></input>
     <button onclick="changeFontSize(3)" class="fontsize-up">fontup</button>
     <button onclick="changeFontSize(-3)" class="fontsize-down">fontdown</button>
-    <button onclick="onAddTxtLine()" class="fontsize-down">add line</button>
+    <button onclick="onAddTxtLine()" class="addTxt">add line</button>
+    <button onclick="onSwitchLine()" class="fontsize-down">switchline</button>
    </section>
 
   </section>
