Change header and footer styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="main-layout grid">
 
     <header class="main-header full flex align-center ">
-      <a href="#" class="logo">MaxiMeme</a>
+      <a href="#" class="logo">MaxiMeme<span class="flash-symbol"></span></a>
       <nav class="links-container clean-anchor">
         <ul class="clean-list flex header-links">
           <li><a class="gallery-link" href="">gallery</a></li>
@@ -30,16 +30,16 @@
 
     <main class="meme-generator-container">
 
-      <section class="canvas-container ">
+      <section class="canvas-container">
         <canvas height="600px" width="500px"></canvas>
       </section>
 
-      <section class="settings-container  ">
+      <section class="settings-container">
 
-        <section class="txtline-container  ">
+        <section class="txtline-container">
         </section>
 
-        <section class="button-container ">
+        <section class="button-container">
 
 
           <select id="font-size-select" onchange="changeFontSizeSelect(this.value)">
@@ -118,7 +118,7 @@
     </section>
 
     <footer class="full main-footer grid align-center justify-center">
-      <a href="#" class="logo">MaxiMeme</a>
+      <a href="#" class="logo">MaxiMeme<span class="rev-flash-symbol"></span></a>
       <small class="footer-rights">&copy; 2024 MaxiMeme. All rights reserved.</small>
       <ul class="flex footer-social clean-list">
         <li><a href="#" class="fa fa-facebook"></a></li>
