--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
         </section>
 
         <section class="bottom-button-container">
-          <a href="#" onclick="downloadCanvas(this)" download="file-name" class=" donload comic-bubble">DOWNLOAD</a>
+          <a href="#" onmouseenter="onDeleteRect()" onclick="downloadCanvas(this)" download="file-name"
+            class=" donload comic-bubble">DOWNLOAD</a>
           <a href="#" onclick="onUploadImg()" class="comic-bubble">SHARE</a>
           <label for="file-input" class="custom-file-input comic-bubble">UPLOAD
-            <input type="file" id="file-input" name="image" onchange="onImgInput(event)" accept="image/*" />
+            <input type="file" id="file-input" name="image" onclick="onImgInput(event)" accept="image/*" />
           </label>
         </section>
       </section>
